# crates

./: Cargo.toml  README.md
crates/auth/: Cargo.toml  README.md
crates/auth/src/: lib.rs
crates/auth/src/domain/models/: claims.rs  errors.rs  identity.rs  token.rs
crates/authz/: Cargo.toml  README.md  build.rs
crates/authz/src/: config.rs  grpc_auth.rs  lib.rs  object.rs  permission.rs  spicedb.rs
crates/server/: Cargo.toml
crates/server/src/: args.rs  lib.rs
crates/server/src/args/: auth.rs
crates/server/src/config/: mod.rs
crates/server/src/http/: mod.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs  telemetry.rs
crates/telemetry/src/domain/models/: config.rs  errors.rs  mod.rs
