[package]
name = "authz"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.13.0"
prost= "0.13.0"
prost-types = "0.13.0"
clap = { version = "4.5.53", features = ["derive"] }
env = "1.0.1"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"

[build-dependencies]
tonic-build = "0.13.0"
