[package]
name = "beep-authz"
version = "0.1.0"
edition = "2024"
authors = ["hugo <hugo.ponthieu@etu.umontpellier.fr>"]
license = "Apache-2.0"
description = "Authorization library for Beep services"
repository = "https://github.com/beep-industries/crates"
documentation = "https://docs.rs/beep-authz"
rust-version = "1.90"
readme = "README.md"


[dependencies]
tonic = "0.13.0"
prost= "0.13.0"
prost-types = "0.13.0"
clap = { version = "4.5.53", features = ["derive"] }
env = "1.0.1"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"

[build-dependencies]
tonic-build = "0.13.0"
