[package]
name = "beep-telemetry"
edition = "2024"
version = "0.1.0"
authors = ["sarah <s.theoulle@outlook.fr>"]
license = "Apache-2.0"
description = "Telemetry library for Beep services"

[dependencies]
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["tonic", "grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
opentelemetry-stdout = "0.31.0"
tokio = "1.48.0"
tracing-core = "0.1.34"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = "0.3.20"
thiserror = "2.0.17"
clap = { version = "4.5.53", features = ["derive", "env"] }

